change podman and docker and improve requirement